--- a/project.css
+++ b/project.css
@@ -8,12 +8,6 @@ body{
   font-size: 20px;
   font-family: 'Roboto Mono', monospace;
 }
-header{
-	background-color: #000000d1 !important;
-}
-.bar{
-	background-color: #00000000 !important;
-}
 
 .wt{
 	font-family: Garamond; 
@@ -47,6 +41,7 @@ li a:hover{
 }
 #contact{
   padding-top: 80px;
+  margin-bottom: 40px;
 }
 
 .txt{
@@ -58,7 +53,7 @@ li a:hover{
 }
 .bg img{
 	height: 100%;
-  filter:brightness(50%);
+  filter:brightness(40%);
 }
 img{
   width: 100%;
@@ -371,6 +366,7 @@ img.hinh {
 }
 #team {
   background: #F0FFF0;
+  padding-bottom: 30px; 
 }
 
 #team .section-header {
@@ -424,6 +420,88 @@ img.hinh {
 @media (min-width: 992px) {
   #team .testimonial-item p {
     width: 80%;
+  }
+  
+
+}
+@media (max-width: 992px) {
+  h1, h2, h3 {
+    font-size: 2rem;
+  }
+  body{
+    font-size: 95%;
+  }
+  button{
+    font-size: 90%!important;
+  }
+  .navbar-toggler{
+    background: white;
+  }
+  #mynav a img{
+    width: 90%;
+  }
+  .caption {
+    bottom: 110px;
+  }
+  p{
+    font-size: 95%;
+  }
+  .yt{
+    font-size: 45px;
+  }
+  .cap {
+    bottom: 40px;
+}
+img.hinh {
+    width: 34%;
+    }
+    .spo {
+    font-size: 50px;
+  }
+  #team .testimonial-item .testimonial-img {
+    width: 190px;
+  }
+}
+@media (max-width: 576px){
+  .col{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  .hv {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.img{
+  width: 70%;
+}
+h1, h2, h3{
+  font-size: 1.25rem;
+}
+button{
+    font-size: 80%!important;
+  }
+  #accordion .panel-title button {
+    padding: 7px;
+  }
+  .caption {
+    bottom: 30px;
+}
+.infor {
+    font-size: 17px;
+}
+.cap {
+    bottom: 15px;
+}
+.yt {
+    font-size: 36px;
+}
+.form-control {
+    font-size: 0.75rem;
+  }
+  .my-2{
+    font-size: 0.75rem;
   }
 }
 
@@ -650,5 +728,11 @@ iframe{
 #contact .php-email-form button:hover{
   background: #13a456;
 }
+footer{
+  background: #3e443e;
+}
+.bottom{
+  padding: 50px 0;
 
+}
 
