--- a/project.css
+++ b/project.css
@@ -149,9 +149,9 @@ img{
     background: #fff;
     font-size: 15px;
     font-weight: bold;
-    color: #94a210;
+    color: #18d26e;
     text-transform: uppercase;
-    border: 2px solid #94a210;
+    border: 2px solid #18d26e;
     border-left: none;
     border-radius: 0 8px 8px 0;
     box-shadow: none;
@@ -164,7 +164,7 @@ img{
     width: 40px;
     height: 110%;
     line-height: 70px;
-    background: #94a210;
+    background: #18d26e;
     font-size: 16px;
     color: #fff;
     text-align: center;
@@ -185,7 +185,7 @@ img{
     top: -1px;
 }
 #accordion .panel-title button span:after{
-    border-top-color: #94a210;
+    border-top-color: #18d26e;
     bottom: -20px;
     z-index: 1;
 }
